# ceptra

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
docs/: backfill.md  disaster_recovery.md  interop_headers.md  kubernetes_affinity.md  operational_runbook.md  policy_deployment.md  reference_bundles.md  sdk_contract.md  specification.md  warmup_modes.md
docs/observability/: alert_policies.md  alertmanager_rules.yaml  grafana_dashboard.json
examples/: gaming_activation_ready.json  gaming_cheat_detection.yaml  iot_workflow.yaml  security_workflow.yaml  supply_chain_workflow.yaml  telco_qos_workflow.yaml
manifests/: ceptra_manifest.json
registry/: ceptra_terms.json  term_registry.json
src/: affinity.rs  app.rs  backpressure.rs  client.rs  compaction.rs  config.rs  definitions.rs  fault_tolerance.rs  lanes.rs  lib.rs  main.rs  observability.rs  policy.rs  schema.rs  stateful.rs  telemetry.rs  test_hooks.rs  threading.rs  wire.rs
src/ceptra/: aggregation.rs  apply.rs  cel.rs  derived.rs  mod.rs  time.rs
src/client/: ack.rs  core.rs  runtime.rs  test_hooks.rs  transport.rs
src/config/: kubernetes.rs  security.rs
src/engine/: aggregation.rs  apply.rs  cel.rs  time.rs
src/event/: commit_epoch.rs  commit_rate.rs  dedup.rs  finalized.rs  retention.rs  watermark.rs
src/event_model/: checkpoint.rs  commit_epoch.rs  commit_rate.rs  dedup.rs  key_state.rs  mod.rs  retention.rs  watermark.rs
src/observability/: core.rs  logging.rs  readiness.rs  readyz.rs
src/reliability/: compaction.rs  fault_tolerance.rs
src/runtime/: affinity.rs  backpressure.rs  hot_reload.rs  partition.rs
src/spec/: definitions.rs  disaster_recovery.rs  manifests.rs  telemetry_catalog.rs  terms.rs  wire_catalog.rs
telemetry/: catalog.json
tests/: ack_gate.rs  affinity.rs  aggregation_pipeline.rs  apply_loop.rs  backpressure_queues.rs  backup_schedule.rs  bootstrap_controller.rs  cel_runtime.rs  checkpoint_writer.rs  client_append.rs  clustor_config.rs  clustor_integration.rs  commit_epoch.rs  commit_rate.rs  compaction_floor.rs  config_service.rs  credit_window_hints.rs  dedup_table.rs  definition_validation.rs  emission_backpressure.rs  fault_tolerance.rs  finalized_horizon.rs  hot_reload_gate.rs  interop_regression.rs  key_sequencer.rs  kubernetes_admission.rs  lane_overflow.rs  lane_validation.rs  logging.rs  observability.rs  partition_routing.rs  partition_threads.rs  policy_versions.rs  readyz_reasons.rs  runtime_modes.rs  schema_registry.rs  security.rs  telemetry_metrics.rs  test_hooks.rs  time_semantics.rs  (+2 more)
tools/: dev_clustor.sh
tools/bootstrapper/: Cargo.toml
tools/bootstrapper/src/: main.rs
tools/bundle_deployer/: Cargo.toml
tools/bundle_deployer/src/: main.rs
tools/dr_cutover/: Cargo.toml
tools/dr_cutover/src/: main.rs
tools/fixtures/: embedded.env  external.env
tools/lane_compiler/: Cargo.toml
tools/lane_compiler/src/: main.rs
tools/sdk_conformance/: Cargo.toml
tools/sdk_conformance/scenarios/: throttles.json
tools/sdk_conformance/src/: main.rs
tools/spec_sync/: Cargo.toml
tools/spec_sync/src/: main.rs
tools/telemetry_guard/: Cargo.toml
tools/telemetry_guard/src/: main.rs
tools/wire_lint/: Cargo.toml
tools/wire_lint/src/: main.rs
